--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.8.1",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
