--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.1",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
